AG-6402 - fixed cell wrapper alignment

--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_widgets.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_widgets.scss
@@ -214,9 +214,9 @@
     }
 
     .ag-cell-wrapper > *:not(.ag-cell-value):not(.ag-group-value) {
+        height: min(var(--ag-theme-row-height, ag-param(row-height) - 2px), ag-param(row-height) - 2px);
         display: flex;
         align-items: center;
-        align-self: center;
         flex: none;
     }
 
